# normalize

./: README.org  normalize.cabal  stack.yaml
app/: Main.hs
src/: Filter.hs  Load.hs  Normalize.hs  Types.hs  Utility.hs
