name:                normalize
version:             0.1.0.0
synopsis:            Insert synopsis here
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/normalize#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          youremail@example.com
copyright:           Copyright: (c) 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Load
                     , Normalize
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , vector
                     , text
                     , cassava
                     , statistics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

executable normalize
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , normalize
                     , optparse-applicative
                     , containers
                     , vector
                     , bytestring
                     , cassava
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/normalize
