name:                normalize
version:             0.2.1.1
synopsis:            Normalize data using a variety of methods.
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/normalize#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          youremail@example.com
copyright:           Copyright: (c) 2016 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Load
                     , Normalize
                     , Filter
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , vector
                     , text
                     , cassava
                     , statistics
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

executable normalize
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , normalize
                     , optparse-generic
                     , containers
                     , vector
                     , bytestring
                     , text
                     , cassava
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/normalize
